--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "short_name": "Ξεμάτιασμα",
   "description": "Ένα απλό app για να σε ξεματιάσει με την ευχή του ματιού.",
   "start_url": "/XEMASTISAS/",
+  "scope": "/XEMASTISAS/",
   "display": "standalone",
   "background_color": "#f4f4f9",
   "theme_color": "#2e88b4",
